# xresponse

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  _src  aclocal.m4  config.h  configure  configure.ac  kbd.h  xresponse.c  xresponse.changes  xresponse.spec  xresponse.yaml
debian/: README.debian  changelog  control  copyright  rules  xresponse.1  xresponse.aegis  xresponse.install
src/: Makefile  Makefile.am  Makefile.in  application.c  application.h  report.c  report.h  scheduler.c  scheduler.h  window.c  window.h  xemu.c  xemu.h  xhandler.c  xhandler.h  xinput.c  xinput.h  xresponse.c  xresponse.h
src/sp-rtrace/: data_ops.h  dlist.c  dlist.h  utils.c  utils.h
website/: default.css  index.html
